# TFM

./: README.md
Script modificación/: README.md
basic_nav/: README.md
manipulation_o3de/: README.md
my_nav2_slam_pkg/: README.md
yasmin_waypoint_nav/: README.md  package.xml  setup.cfg  setup.py
yasmin_waypoint_nav/launch/: yasmin_waypoint_nav.launch.py
yasmin_waypoint_nav/resource/: yasmin_waypoint_nav
yasmin_waypoint_nav/test/: test_waypoints.py
yasmin_waypoint_nav/yasmin_waypoint_nav/: yasmin_waypoint_navigator.py
